--- a/src/app/components/register-aliado/register-photos/cargardocumentos/cargardocumentos.component.html
+++ b/src/app/components/register-aliado/register-photos/cargardocumentos/cargardocumentos.component.html
@@ -16,15 +16,21 @@
             <div fxFlex="100" fxFlex.lt-md style="width: 60% !important; text-align: center;">
                 <mat-list role="list">
                     <mat-list-item role="listitem">
-                        <h3>Cara 1</h3>
-                        <p class="pendiente">Pendiente</p>
-                        <img src="../../../../assets/register/arrow.png">
+                        <label for="file1">
+                            <h3>Cara 1</h3>
+                            <p class="pendiente">Pendiente</p>
+                            <img src="../../../../assets/register/arrow.png">
+                        </label>
+                        <input type="file" id="file1" style="display: none;">
                     </mat-list-item>
                     <mat-divider></mat-divider>
                     <mat-list-item role="listitem">
-                        <h3>Cara 2</h3>
-                        <p class="pendiente">Pendiente</p>
-                        <img src="../../../../assets/register/arrow.png">
+                        <label for="file2">
+                            <h3>Cara 2</h3>
+                            <p class="pendiente">Pendiente</p>
+                            <img src="../../../../assets/register/arrow.png">
+                        </label>
+                        <input type="file" id="file2" style="display: none;">
                     </mat-list-item>
                 </mat-list>
 
