--- a/src/app/components/register-aliado/register-photos/register-photos.component.html
+++ b/src/app/components/register-aliado/register-photos/register-photos.component.html
@@ -21,39 +21,57 @@
                     </mat-list-item>
                     <mat-divider></mat-divider>
                     <mat-list-item role="listitem">
-                        <h3>Documento de permanencia (si aplica)</h3>
-                        <p class="pendiente">Pendiente</p>
-                        <img src="../../../../assets/register/arrow.png">
+                        <label for="file1">
+                            <h3>Documento de permanencia (si aplica)</h3>
+                            <p class="pendiente">Pendiente</p>
+                            <img src="../../../../assets/register/arrow.png">
+                        </label>
+                        <input type="file" id="file1" style="display: none;">
                     </mat-list-item>
                     <mat-divider></mat-divider>
                     <mat-list-item role="listitem">
-                        <h3>Copia de tarjeta de propiedad (si aplica)</h3>
-                        <p class="pendiente">Pendiente</p>
-                        <img src="../../../../assets/register/arrow.png">
+                        <label for="file2">
+                            <h3>Copia de tarjeta de propiedad (si aplica)</h3>
+                            <p class="pendiente">Pendiente</p>
+                            <img src="../../../../assets/register/arrow.png">
+                        </label>
+                        <input type="file" id="file2" style="display: none;">
                     </mat-list-item>
                     <mat-divider></mat-divider>
                     <mat-list-item role="listitem">
-                        <h3>Documento de SOAT vigente (si aplica)</h3>
-                        <p class="pendiente">Pendiente</p>
-                        <img src="../../../../assets/register/arrow.png">
+                        <label for="file3">
+                            <h3>Documento de SOAT vigente (si aplica)</h3>
+                            <p class="pendiente">Pendiente</p>
+                            <img src="../../../../assets/register/arrow.png">
+                        </label>
+                        <input type="file" id="file3" style="display: none;">
                     </mat-list-item>
                     <mat-divider></mat-divider>
                     <mat-list-item role="listitem">
-                        <h3>Fotografia reciente del aliado</h3>
-                        <p class="pendiente">Pendiente</p>
-                        <img src="../../../../assets/register/arrow.png">
+                        <label for="file4">
+                            <h3>Fotografia reciente del aliado</h3>
+                            <p class="pendiente">Pendiente</p>
+                            <img src="../../../../assets/register/arrow.png">
+                        </label>
+                        <input type="file" id="file4" style="display: none;">
                     </mat-list-item>
                     <mat-divider></mat-divider>
                     <mat-list-item role="listitem">
-                        <h3>Documento de identificación</h3>
-                        <p class="pendiente">Pendiente</p>
-                        <img src="../../../../assets/register/arrow.png">
+                        <label for="file5">
+                            <h3>Documento de identificación</h3>
+                            <p class="pendiente">Pendiente</p>
+                            <img src="../../../../assets/register/arrow.png">
+                        </label>
+                        <input type="file" id="file5" style="display: none;">
                     </mat-list-item>
                     <mat-divider></mat-divider>
                     <mat-list-item role="listitem">
-                        <h3>Foto del vehiculo donde se evidencia la placa (si aplica)</h3>
-                        <p class="pendiente">Pendiente</p>
-                        <img src="../../../../assets/register/arrow.png">
+                        <label for="file6">
+                            <h3>Foto del vehiculo donde se evidencia la placa (si aplica)</h3>
+                            <p class="pendiente">Pendiente</p>
+                            <img src="../../../../assets/register/arrow.png">
+                        </label>
+                        <input type="file" id="file6" style="display: none;">
                     </mat-list-item>
                 </mat-list>
 
