--- a/src/app/components/register-aliado/register-photos/register-photos.component.html
+++ b/src/app/components/register-aliado/register-photos/register-photos.component.html
@@ -23,55 +23,55 @@
                     <mat-list-item role="listitem">
                         <label for="file1">
                             <h3>Documento de permanencia (si aplica)</h3>
-                            <p class="pendiente">Pendiente</p>
+                            <p class="pendiente" id="estado2">Pendiente</p>
                             <img src="../../../../assets/register/arrow.png">
                         </label>
-                        <input type="file" id="file1" style="display: none;">
+                        <input type="file" id="file1" style="display: none;" (change)="cambiarEstado(1)">
                     </mat-list-item>
                     <mat-divider></mat-divider>
                     <mat-list-item role="listitem">
                         <label for="file2">
                             <h3>Copia de tarjeta de propiedad (si aplica)</h3>
-                            <p class="pendiente">Pendiente</p>
+                            <p class="pendiente" id="estado3">Pendiente</p>
                             <img src="../../../../assets/register/arrow.png">
                         </label>
-                        <input type="file" id="file2" style="display: none;">
+                        <input type="file" id="file2" style="display: none;" (change)="cambiarEstado(2)">
                     </mat-list-item>
                     <mat-divider></mat-divider>
                     <mat-list-item role="listitem">
                         <label for="file3">
                             <h3>Documento de SOAT vigente (si aplica)</h3>
-                            <p class="pendiente">Pendiente</p>
+                            <p class="pendiente" id="estado4">Pendiente</p>
                             <img src="../../../../assets/register/arrow.png">
                         </label>
-                        <input type="file" id="file3" style="display: none;">
+                        <input type="file" id="file3" style="display: none;" (change)="cambiarEstado(3)">
                     </mat-list-item>
                     <mat-divider></mat-divider>
                     <mat-list-item role="listitem">
                         <label for="file4">
                             <h3>Fotografia reciente del aliado</h3>
-                            <p class="pendiente">Pendiente</p>
+                            <p class="pendiente" id="estado5">Pendiente</p>
                             <img src="../../../../assets/register/arrow.png">
                         </label>
-                        <input type="file" id="file4" style="display: none;">
+                        <input type="file" id="file4" style="display: none;" (change)="cambiarEstado(4)">
                     </mat-list-item>
                     <mat-divider></mat-divider>
                     <mat-list-item role="listitem">
                         <label for="file5">
                             <h3>Documento de identificación</h3>
-                            <p class="pendiente">Pendiente</p>
+                            <p class="pendiente" id="estado6">Pendiente</p>
                             <img src="../../../../assets/register/arrow.png">
                         </label>
-                        <input type="file" id="file5" style="display: none;">
+                        <input type="file" id="file5" style="display: none;" (change)="cambiarEstado(5)">
                     </mat-list-item>
                     <mat-divider></mat-divider>
                     <mat-list-item role="listitem">
                         <label for="file6">
                             <h3>Foto del vehiculo donde se evidencia la placa (si aplica)</h3>
-                            <p class="pendiente">Pendiente</p>
+                            <p class="pendiente" id="estado7">Pendiente</p>
                             <img src="../../../../assets/register/arrow.png">
                         </label>
-                        <input type="file" id="file6" style="display: none;">
+                        <input type="file" id="file6" style="display: none;" (change)="cambiarEstado(6)">
                     </mat-list-item>
                 </mat-list>
 
