cambio de nombre imagen de carga masiva cvs

--- a/src/app/components/home/carga-masiva/carga-masiva.component.html
+++ b/src/app/components/home/carga-masiva/carga-masiva.component.html
@@ -11,7 +11,7 @@
 
 <div class="input">
     <label for="files">
-        <span><img src="../../../../assets/home/cargar.png" alt="">Cargar</span>
+        <span><img src="../../../../assets/home/cargarcvs.png" alt="">Cargar</span>
     </label>
     <input type="file" id="files" style="display: none;" accept=".csv">
 
