--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,87 +1,156 @@
-.title {
-  color: #d5c9f5;
-  text-align: center;
+.background {
+    background: url("../../../assets/login/background.png") no-repeat fixed center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
 }
 
-.description{
-  color: #6f6f6f;
-  max-width: 350px;
-  text-align: center;
-}
-.background{
-  background: url("../../../assets/login/background.png") no-repeat fixed center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  height: 100%;
-  width: 100%;
-}
-.persona{
-background-image: url('../../../assets/login/persona.png');
-  background-repeat: no-repeat;
-  padding: 10px 9px 7px 70px;
-}
-.empresa{
-background-image: url('../../../assets/login/empresa.png');
-  background-repeat: no-repeat;
-  padding: 10px 9px 7px 70px;
-}
-.titles{
-  color:#2F8457;
-
-}
-.padd{
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-.gray-div{
-  background-color: #f2f2f2;
-}
-::placeholder {
-  opacity: 1; /* Firefox */
-  text-align: center;
-}
-.text-decoration-p {
-  color: #00aeee;
-}
-.footer-p {
-  object-fit: contain;
-  font-size: 10px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 2;
-  letter-spacing: 0.2px;
-  text-align: center;
-}
-.btn-login {
-  border: 2px solid #7e5ae1;
-  color: white;
-  background-color: white;
-  object-fit: contain;
-  border-radius: 3px;
-  background-color: #7e5ae1;
-  border-radius: 3px;
-  font-size: 20px;
+.active {
+    color: rgb(47, 132, 87);
+    background: #eee;
 }
 
-mat-form-field{
-  width: 100%;
-}
-.example-container .mat-form-field + .mat-form-field {
-  margin-left: 8px;
+button.btn:active {
+    color: rgb(47, 132, 87);
 }
 
-.example-right-align {
-  text-align: right;
+button {
+    cursor: pointer;
+    background: transparent;
+    border: 0;
 }
 
-input.example-right-align::-webkit-outer-spin-button,
-input.example-right-align::-webkit-inner-spin-button {
-  display: none;
+.login {
+    width: 60%;
+    margin: 10em auto;
 }
 
-input.example-right-align {
-  -moz-appearance: textfield;
+.botones {
+    width: 250px;
+    margin: 20px auto;
+    display: none;
+}
+
+.botones button {
+    width: 50%;
+}
+
+.head-login {
+    width: 100%;
+    display: block;
+    text-align: center;
+}
+
+.content-login {
+    display: flex;
+    margin: 40px auto;
+}
+
+.login-login,
+.register-login {
+    width: 50%;
+    padding: 50px;
+    overflow: hidden;
+}
+
+.register-login {
+    border-left: 2px solid #aaa;
+}
+
+.login-login mat-form-field,
+.register-login mat-form-field {
+    display: block;
+    width: 100%;
+}
+
+.login-login h2,
+.register-login h2 {
+    color: rgb(47, 132, 87);
+    font-size: 23px;
+    font-weight: 200;
+}
+
+.login-login a {
+    color: rgb(47, 132, 87);
+    display: block;
+    margin-bottom: 20px;
+}
+
+mat-button-toggle {
+    width: 100%;
+    margin: 10px auto;
+    display: block;
+    height: 85px;
+}
+
+mat-button-toggle img {
+    position: absolute;
+    left: 0px;
+    padding: 10px 0px;
+}
+
+mat-button-toggle label {
+    padding: 10px 0px;
+    padding-top: 10px;
+    margin-left: 80px;
+    padding-top: 43px;
+}
+
+@media (max-width: 1200px) {
+    .login {
+        width: 80%;
+        margin: 10em auto;
+    }
+    .login-login,
+    .register-login {
+        display: block;
+    }
+}
+
+@media (max-width: 1000px) {
+    .login {
+        width: 90%;
+        margin: 10em auto;
+    }
+    .login-login,
+    .register-login {
+        display: block;
+    }
+}
+
+@media (max-width: 900px) {
+    .login {
+        width: 100%;
+        margin: 10em auto;
+    }
+    .login-login,
+    .register-login {
+        display: block;
+    }
+}
+
+@media (max-width: 750px) {
+    .botones {
+        display: block;
+    }
+    .register-login {
+        display: none;
+    }
+    .login {
+        display: block;
+    }
+    .content-login {
+        margin: 0 !important;
+    }
+    .login-login,
+    .register-login {
+        width: 60%;
+        margin: auto;
+        padding: 10px;
+        border: 0 !important;
+    }
 }
