--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,85 +1,65 @@
 <div class="background">
-    <div style="padding-top: 13%;padding-bottom: 3% " fxLayout="row" fxLayoutAlign="center center">
-        <img src="../../../assets/login/lleva.png" height="0.7%" width="12%">
-    </div>
+    <div class="login">
+        <div class="head-login">
+            <img src="../../../assets/login/lleva.png">
+        </div>
 
-    <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
+        <div class="botones">
+            <button mat-button class="option active" id="login" (click)="option('login')">Iniciar Sesión</button>
+            <button mat-button class="option" id="register" (click)="option('register')">Registrarse</button>
+        </div>
 
+        <div class="content-login">
 
-        <div fxLayout="column wrap" fxLayoutAlign="center center" style="width: 30% !important;">
+            <div class="form login-login" id="form-login">
+                <h2>Iniciar Sesión</h2>
 
-            <div class="titles" style="padding: 10px;" fxFlex="80" fxFlex.lt-md>
-                <FONT SIZE=7 class="titles">Iniciar Sesión</FONT>
-            </div>
-            <div fxFlex="100" fxFlex.lt-md>
-                <mat-form-field appearance="outline" style="    padding: 0 2.75em 0 0em">
+                <mat-form-field appearance="outline">
                     <mat-label>Correo Electrónico</mat-label>
                     <input [(ngModel)]="user_name" matInput type="text" placeholder="Correo" required>
                 </mat-form-field>
-            </div>
 
-            <div fxFlex="50" fxFlex.lt-md>
                 <mat-form-field appearance="outline">
                     <mat-label>Enter your password</mat-label>
                     <input [(ngModel)]="password" matInput [type]="hide ? 'password' : 'text'">
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
+                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
                 </mat-form-field>
-            </div>
-
-            <div class="padd" fxFlex="50" fxFlex.lt-md>
 
                 <a routerLink="/password">Olvidé mi contraseña</a>
+
+                <img src="../../../assets/login/rojo.png" href="www.google.com" width="100%">
+
+                <img src="../../../assets/login/verde.png" (click)="login()" width="100%">
             </div>
 
-            <div class="padd" fxFlex="50" fxFlex.lt-md>
-                <a routerLink="/password">
-                    <img src="../../../assets/login/rojo.png" href="www.google.com">
-                </a>
-            </div>
+            <div class="form register-login" id="form-register">
+                <h2>Aún no tengo cuenta</h2>
 
-            <div class="padd" fxFlex="50" fxFlex.lt-md>
-                <img src="../../../assets/login/verde.png" (click)="login()">
-            </div>
-        </div>
+                <p>Escoge como deseas crear tu cuenta.</p>
 
+                <mat-button-toggle (click)="registroPersona()">
+                    <img src="../../../assets/login/persona.png" alt="">
+                    <label>Registro de persona</label>
+                </mat-button-toggle>
 
-        <div fxLayout="column wrap" fxLayoutAlign="center center" style="width: 30% !important;">
-
-            <div class="titles padd" fxFlex="50" fxFlex.lt-md>
-                <FONT SIZE=7 class="titles">Aún no tengo cuenta</FONT>
-            </div>
-            <p>Escoge como deseas crear tu cuenta</p>
-
-
-            <div class="padd" fxFlex="50" fxFlex.lt-md>
-                <mat-button-toggle class="persona" (click)="registroPersona()">Registro de persona</mat-button-toggle>
-            </div>
-
-            <div class="padd" fxFlex="50" fxFlex.lt-md>
-                <mat-button-toggle class="empresa" (click)="registroEmpresa()">Registro de empresa</mat-button-toggle>
-            </div>
-
-            <div class="padd" fxFlex="50" fxFlex.lt-md>
+                <mat-button-toggle (click)="registroEmpresa()">
+                    <img src="../../../assets/login/empresa.png" alt="">
+                    <label>Registro de empresa</label>
+                </mat-button-toggle>
                 <a routerLink="/phone">
-                    <img src="../../../assets/login/gris.png">
+                    <img src="../../../assets/login/gris.png" width="100%">
                 </a>
-            </div>
 
-
-            <div class="padd" fxFlex="50" fxFlex.lt-md>
                 <a href="www.google.com">
-                    <img src="../../../assets/login/negro.png" href="www.google.com">
+                    <img src="../../../assets/login/negro.png" href="www.google.com" width="100%">
                 </a>
             </div>
-
-
-
         </div>
-
     </div>
-    <mat-card style="background: #eee; padding: 15px 35px;">
+
+    <mat-card style=" padding: 15px 35px;">
         <app-footer></app-footer>
     </mat-card>
 </div>
