--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -269,7 +269,7 @@
             </div>
 
         </mat-card>
-        <mat-card fxFlex="60">
+        <mat-card fxFlex="60" class="card-map">
             <app-map></app-map>
         </mat-card>
     </div>
