--- a/src/app/components/register-aliado/register-aliado.component.css
+++ b/src/app/components/register-aliado/register-aliado.component.css
@@ -1,104 +1,46 @@
-.title {
-    color: #d5c9f5;
-    text-align: center;
-}
-
-.description {
-    color: #6f6f6f;
-    max-width: 350px;
-    text-align: center;
-}
-
 .background {
     background: url("../../../assets/login/background.png") no-repeat fixed center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 100%;
     width: 100%;
     position: absolute;
 }
 
-.persona {
-    background-image: url('../../../assets/login/persona.png');
-    background-repeat: no-repeat;
-    padding: 10px 9px 7px 70px;
+.register-aliado {
+    width: 50%;
+    margin: 4% auto;
 }
 
-.empresa {
-    background-image: url('../../../assets/login/empresa.png');
-    background-repeat: no-repeat;
-    padding: 10px 9px 7px 70px;
+.logo-aliado {
+    width: 100%;
+    text-align: center;
+    padding: 35px 0;
 }
 
-.centrar {
+.logo-aliado img {
+    width: 120px;
+}
+
+.title-aliado {
+    width: 100%;
     text-align: center;
 }
 
-.titles {
+.title-aliado h1 {
     color: #2F8457;
     margin: 15px;
-    font-weight: 500;
 }
 
-.padd {
-    padding-top: 10px;
-    padding-bottom: 10px;
+.title2 {
+    margin: 5px 17px;
+    color: #2F8457;
 }
 
-.gray-div {
-    background-color: #f2f2f2;
-}
-
-::placeholder {
-    opacity: 1;
-    /* Firefox */
-    text-align: center;
-}
-
-.text-decoration-p {
-    color: #00aeee;
-}
-
-.footer-p {
-    object-fit: contain;
-    font-size: 10px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 2;
-    letter-spacing: 0.2px;
-    text-align: center;
-}
-
-.btn-login {
-    border: 2px solid #7e5ae1;
-    color: white;
-    background-color: white;
-    object-fit: contain;
-    border-radius: 3px;
-    background-color: #7e5ae1;
-    border-radius: 3px;
-    font-size: 20px;
-}
-
-mat-form-field {
-    width: 100%;
-}
-
-.centrado {
-    position: absolute;
-    top: 50%;
-    left: 49%;
-    transform: translate(-50%, -50%);
-    color: white;
-}
-
-.contenedor {
-    position: relative;
-    display: inline-block;
-    text-align: center;
+mat-list-item {
+    font-size: 14px !important;
+    height: 50px !important;
 }
 
 mat-list-item span {
@@ -115,4 +57,33 @@ mat-list-item span label {
     font-size: 12px;
     color: #fff;
     font-weight: bold;
+}
+
+@media (max-width: 1100px) {
+    .register-aliado {
+        width: 60%;
+    }
+}
+
+@media (max-width: 800px) {
+    .register-aliado {
+        width: 80%;
+    }
+}
+
+@media (max-width: 650px) {
+    .register-aliado {
+        width: 96%;
+    }
+}
+
+@media (max-width: 500px) {
+    .register-aliado {
+        width: 98%;
+        margin: 4% auto;
+    }
+    mat-list-item {
+        font-size: 13px !important;
+        height: 55px !important;
+    }
 }
