--- a/src/app/components/register-aliado/registro/registro.component.css
+++ b/src/app/components/register-aliado/registro/registro.component.css
@@ -1,86 +1,95 @@
-.title {
-  color: #d5c9f5;
-  text-align: center;
+.background {
+    background: url("../../../../assets/login/background.png") no-repeat fixed center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    position: absolute;
 }
 
-.description{
-  color: #6f6f6f;
-  max-width: 350px;
-  text-align: center;
-}
-.background{
-  background: url("../../../../assets/login/background.png") no-repeat fixed center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  height: 100%;
-  width: 100%;
-}
-.persona{
-  background-image: url('../../../../assets/login/persona.png');
-  background-repeat: no-repeat;
-  padding: 10px 9px 7px 70px;
-}
-.empresa{
-  background-image: url('../../../../assets/login/empresa.png');
-  background-repeat: no-repeat;
-  padding: 10px 9px 7px 70px;
-}
-.centrar{
-  text-align: center;
-}
-.titles{
-  color:#2F8457;
-  text-align: center;
-}
-.padd{
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-.gray-div{
-  background-color: #f2f2f2;
-}
-::placeholder {
-  opacity: 1; /* Firefox */
-  text-align: center;
-}
-.text-decoration-p {
-  color: #00aeee;
-}
-.footer-p {
-  object-fit: contain;
-  font-size: 10px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 2;
-  letter-spacing: 0.2px;
-  text-align: center;
-}
-.btn-login {
-  border: 2px solid #7e5ae1;
-  color: white;
-  background-color: white;
-  object-fit: contain;
-  border-radius: 3px;
-  background-color: #7e5ae1;
-  border-radius: 3px;
-  font-size: 20px;
+.form-registro {
+    width: 50%;
+    margin: auto;
 }
 
-mat-form-field{
-  width: 100%;
+.logo-registro {
+    width: 100%;
+    text-align: center;
+    padding-top: 100px;
+    padding-bottom: 15px;
 }
-.centrado{
-  position: absolute;
-  top: 50%;
-  left: 49%;
-  transform: translate(-50%, -50%);
-  color: white;
+
+.logo-registro img {
+    width: 120px;
 }
-.contenedor{
-  position: relative;
-  display: inline-block;
-  text-align: center;
+
+.title-registro {
+    text-align: center;
+    color: #2F8457;
+}
+
+.row {
+    display: flex;
+}
+
+.col-md-3 {
+    width: 50%;
+    margin: 0 5px;
+}
+
+.documento {
+    display: flex;
+    justify-content: space-between;
+    overflow: hidden;
+}
+
+.tipo-doc {
+    width: 30%;
+    margin-right: 5px;
+}
+
+.number-doc {
+    width: 68%;
+}
+
+mat-form-field {
+    width: 100%;
+}
+
+.col-md-3 p {
+    line-height: 10px;
+    font-size: 11px;
+}
+
+.col-md-3 img {
+    width: 100%;
+}
+
+@media (max-width: 1100px) {
+    .form-registro {
+        width: 60%;
+    }
+}
+
+@media (max-width: 800px) {
+    .form-registro {
+        width: 80%;
+    }
+}
+
+@media (max-width: 650px) {
+    .form-registro {
+        width: 96%;
+    }
+}
+
+@media (max-width: 500px) {
+    .row {
+        display: block;
+    }
+    .col-md-3 {
+        width: 100%;
+        margin: 0 !important;
+    }
 }
